[package]
name = "graviplex"
version = "0.1.0"
edition = "2021"

[dependencies]

bevy = { version = "0.14.0", features = ["dynamic_linking"] }
rand = "0.8.5"
clippy = "0.0.302"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

[toolchain]
channel = "nightly"

